[package]
name = "commune"
version = "0.0.1"
authors = ["misaka4e21"]
edition = "2018"
default-run = "commune"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json", "default-tls"] }

diesel = { version = "1", features = ["postgres", "r2d2", "chrono", "url"] }
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

url = { version = "2.2", features = ["serde"] }

anyhow = "1"
derive_more = "0.99"
validator = { version = "0.12", features = ["derive", "unic"] }
http = "0.2"
thiserror = "1"
base64 = "0.13"

idna = "0.2"
bcrypt = "0.9"

openssl-sys = "0.9"
openssl = "0.10"

getopts = "0.2"
rpassword = "5"

log = "0.4"
pretty_env_logger = "0.3"

bytes = "1.0"